[gd_scene load_steps=16 format=3 uid="uid://dkrncjro84kj8"]

[ext_resource type="Script" path="res://Scripts/how_to.gd" id="1_2plm1"]
[ext_resource type="Texture2D" uid="uid://nra2p7ynw8dc" path="res://Assets/Art/bricks.png" id="1_h743w"]
[ext_resource type="Texture2D" uid="uid://vr46yilgcau" path="res://Assets/Art/Road.png" id="2_v13fr"]
[ext_resource type="FontFile" uid="uid://bgjbj7oq2nv44" path="res://Assets/SCG_FONT.ttf" id="3_s0w1s"]
[ext_resource type="Texture2D" uid="uid://cr0iydjbgn7lt" path="res://Assets/Art/UI Buttons/cross_normal.png" id="4_t05cs"]
[ext_resource type="Texture2D" uid="uid://c3oii5mxhmg0h" path="res://Assets/Art/UI Buttons/cross_pressed.png" id="5_x330x"]
[ext_resource type="Texture2D" uid="uid://gg0kmkyx12a3" path="res://Assets/Art/UI Buttons/cross_hover.png" id="6_otv67"]
[ext_resource type="Texture2D" uid="uid://bdpht5cynb0y6" path="res://Assets/Art/Misc.png" id="8_lnf5q"]
[ext_resource type="Texture2D" uid="uid://dww6c367uddmo" path="res://Assets/Art/UI Buttons/play_normal.png" id="9_64oex"]
[ext_resource type="Texture2D" uid="uid://0v1bnl5rcnlb" path="res://Assets/Art/UI Buttons/play_pressed.png" id="10_jbap4"]
[ext_resource type="Texture2D" uid="uid://naujco7ho1nv" path="res://Assets/Art/UI Buttons/play_hover.png" id="11_nlqia"]
[ext_resource type="Texture2D" uid="uid://cw57qeja5lbci" path="res://Assets/Art/Sprite_Sprites.png" id="12_6w0gk"]
[ext_resource type="Texture2D" uid="uid://n41yb1uronnr" path="res://Assets/Art/tilemap_white_packed.png" id="12_yhltk"]
[ext_resource type="Texture2D" uid="uid://bdg5gjjvreutl" path="res://Assets/Art/Attacks.png" id="13_d5c7n"]
[ext_resource type="Texture2D" uid="uid://0egcbm85cirq" path="res://Assets/Art/Arrows.png" id="15_6n1uh"]

[node name="How To" type="Node2D"]
script = ExtResource("1_2plm1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 320.0
offset_bottom = 320.0
scale = Vector2(0.75, 0.75)
mouse_filter = 2
texture = ExtResource("1_h743w")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 320.0
mouse_filter = 2
color = Color(0, 0, 0, 0.643137)

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_top = 48.0
offset_right = 240.0
offset_bottom = 64.0
scale = Vector2(1.333, 1.333)
mouse_filter = 2
texture = ExtResource("2_v13fr")
stretch_mode = 1

[node name="Top_Title" type="RichTextLabel" parent="."]
offset_left = 82.0
offset_top = 10.0
offset_right = 3402.0
offset_bottom = 470.0
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_s0w1s")
theme_override_font_sizes/normal_font_size = 256
text = "How to Play"

[node name="menu" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 24.0
offset_bottom = 24.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("4_t05cs")
texture_pressed = ExtResource("5_x330x")
texture_hover = ExtResource("6_otv67")

[node name="Box" type="Node2D" parent="."]
position = Vector2(117, 138)

[node name="ColorRect" type="ColorRect" parent="Box"]
offset_left = -91.0
offset_top = -68.0
offset_right = 43.0
offset_bottom = -48.0
color = Color(1, 0.682353, 0.788235, 1)

[node name="ColorRect2" type="ColorRect" parent="Box"]
offset_left = -110.0
offset_top = -46.0
offset_right = 117.0
offset_bottom = 64.0
color = Color(1, 0.682353, 0.788235, 1)

[node name="TTL" type="Sprite2D" parent="Box"]
position = Vector2(-87, -63)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 6

[node name="TTM" type="Sprite2D" parent="Box"]
position = Vector2(-24.5, -63)
scale = Vector2(6.8125, 1)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 7

[node name="TTR" type="Sprite2D" parent="Box"]
position = Vector2(38, -63)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 8

[node name="TL" type="Sprite2D" parent="Box"]
position = Vector2(-106, -43)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 6

[node name="TM" type="Sprite2D" parent="Box"]
position = Vector2(3, -43)
scale = Vector2(12.875, 1)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 7

[node name="TM2" type="Sprite2D" parent="Box"]
position = Vector2(-88, -57)
rotation = -1.5708
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 7

[node name="TM3" type="Sprite2D" parent="Box"]
position = Vector2(39, -57)
rotation = -1.5708
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 19

[node name="TR" type="Sprite2D" parent="Box"]
position = Vector2(112, -43)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 8

[node name="LS" type="Sprite2D" parent="Box"]
position = Vector2(-107, 9.55546)
rotation = 1.5708
scale = Vector2(5.56943, 1)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 19

[node name="LS2" type="Sprite2D" parent="Box"]
position = Vector2(-107, -25)
rotation = -1.5708
scale = Vector2(1.35216, 1)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 7

[node name="RS" type="Sprite2D" parent="Box"]
position = Vector2(113, 10.4734)
rotation = -1.5708
scale = Vector2(5.68418, 1)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 19

[node name="BL" type="Sprite2D" parent="Box"]
position = Vector2(-106, 60)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 18

[node name="BM" type="Sprite2D" parent="Box"]
position = Vector2(2.99999, 60)
scale = Vector2(12.875, 1)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 19

[node name="BR" type="Sprite2D" parent="Box"]
position = Vector2(112, 60)
texture = ExtResource("8_lnf5q")
hframes = 12
vframes = 4
frame = 20

[node name="Box_Name" type="RichTextLabel" parent="Box"]
offset_left = -89.0
offset_top = -67.0
offset_right = 2291.0
offset_bottom = 393.0
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme_override_colors/default_color = Color(0.0666667, 0.0156863, 0.27451, 1)
theme_override_fonts/normal_font = ExtResource("3_s0w1s")
theme_override_font_sizes/normal_font_size = 256
text = "How to"

[node name="Box_Contents" type="RichTextLabel" parent="Box"]
offset_left = -108.0
offset_top = -45.0
offset_right = 4312.0
offset_bottom = 1875.0
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme_override_colors/default_color = Color(0.0666667, 0.0156863, 0.27451, 1)
theme_override_fonts/normal_font = ExtResource("3_s0w1s")
theme_override_font_sizes/normal_font_size = 256
text = "How to do the what"

[node name="Box_Page_Num" type="RichTextLabel" parent="Box"]
offset_left = 92.0
offset_top = 47.0
offset_right = 732.0
offset_bottom = 367.0
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme_override_colors/default_color = Color(0.0666667, 0.0156863, 0.27451, 1)
theme_override_fonts/normal_font = ExtResource("3_s0w1s")
theme_override_font_sizes/normal_font_size = 256
text = "1/6"

[node name="Prev" type="TextureButton" parent="."]
offset_left = 192.0
offset_top = 87.0
offset_right = 208.0
offset_bottom = 103.0
rotation = 3.14159
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("9_64oex")
texture_pressed = ExtResource("10_jbap4")
texture_hover = ExtResource("11_nlqia")

[node name="Next" type="TextureButton" parent="."]
offset_left = 196.0
offset_top = 63.0
offset_right = 212.0
offset_bottom = 79.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("9_64oex")
texture_pressed = ExtResource("10_jbap4")
texture_hover = ExtResource("11_nlqia")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(120, 225)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_6w0gk")
hframes = 6
vframes = 2

[node name="Movement" type="Node2D" parent="."]
position = Vector2(120, 220)

[node name="Sprite2D" type="Sprite2D" parent="Movement"]
position = Vector2(-80, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 86

[node name="Sprite2D2" type="Sprite2D" parent="Movement"]
position = Vector2(-60, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 120

[node name="Sprite2D3" type="Sprite2D" parent="Movement"]
position = Vector2(-40, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 121

[node name="Sprite2D4" type="Sprite2D" parent="Movement"]
position = Vector2(-20, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 122

[node name="Sprite2D5" type="Sprite2D" parent="Movement"]
position = Vector2(20, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 166

[node name="Sprite2D6" type="Sprite2D" parent="Movement"]
position = Vector2(80, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 167

[node name="Sprite2D7" type="Sprite2D" parent="Movement"]
position = Vector2(60, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 168

[node name="Sprite2D8" type="Sprite2D" parent="Movement"]
position = Vector2(40, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 169

[node name="SWSH" type="Node2D" parent="."]
position = Vector2(120, 220)

[node name="Sprite2D" type="Sprite2D" parent="SWSH"]
position = Vector2(-40, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 77

[node name="Sprite2D2" type="Sprite2D" parent="SWSH"]
position = Vector2(40, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 78

[node name="Sprite2D3" type="Sprite2D" parent="SWSH"]
position = Vector2(-56, 0)
texture = ExtResource("13_d5c7n")
hframes = 7
vframes = 4
frame = 8

[node name="Sprite2D4" type="Sprite2D" parent="SWSH"]
position = Vector2(56, 0)
texture = ExtResource("13_d5c7n")
hframes = 7
vframes = 4
frame = 15

[node name="Deflect" type="Node2D" parent="."]
position = Vector2(120, 220)

[node name="Sprite2D" type="Sprite2D" parent="Deflect"]
position = Vector2(-69, 8)
rotation = -3.14159
texture = ExtResource("15_6n1uh")
flip_v = true
hframes = 2

[node name="Sprite2D2" type="Sprite2D" parent="Deflect"]
position = Vector2(-75, -4)
rotation = 3.14159
texture = ExtResource("13_d5c7n")
flip_v = true
hframes = 7
vframes = 4
frame = 1

[node name="Sprite2D3" type="Sprite2D" parent="Deflect"]
position = Vector2(-98, 0)
texture = ExtResource("13_d5c7n")
hframes = 7
vframes = 4
frame = 8

[node name="Sprite2D7" type="Sprite2D" parent="Deflect"]
position = Vector2(89, 6)
rotation = -3.14159
texture = ExtResource("15_6n1uh")
flip_h = true
flip_v = true
hframes = 2

[node name="Sprite2D8" type="Sprite2D" parent="Deflect"]
position = Vector2(67, 0)
rotation = 3.14159
texture = ExtResource("13_d5c7n")
flip_h = true
flip_v = true
hframes = 7
vframes = 4
frame = 1

[node name="Sprite2D9" type="Sprite2D" parent="Deflect"]
position = Vector2(36, 0)
rotation = 1.31772
texture = ExtResource("13_d5c7n")
hframes = 7
vframes = 4
frame = 8

[node name="Sprite2D4" type="Sprite2D" parent="Deflect"]
position = Vector2(-14, 3)
rotation = -3.14159
texture = ExtResource("15_6n1uh")
flip_v = true
hframes = 2

[node name="Sprite2D5" type="Sprite2D" parent="Deflect"]
position = Vector2(-12, -6)
rotation = 3.14159
texture = ExtResource("13_d5c7n")
flip_v = true
hframes = 7
vframes = 4
frame = 1

[node name="Sprite2D6" type="Sprite2D" parent="Deflect"]
position = Vector2(-24, 0)
rotation = 0.303687
texture = ExtResource("13_d5c7n")
hframes = 7
vframes = 4
frame = 8

[node name="Enemy" type="Node2D" parent="."]
position = Vector2(120, 220)

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
position = Vector2(48, 7)
texture = ExtResource("15_6n1uh")
hframes = 2

[node name="Sprite2D2" type="Sprite2D" parent="Enemy"]
position = Vector2(66, -6)
texture = ExtResource("13_d5c7n")
hframes = 7
vframes = 4
frame = 1

[node name="Sprite2D3" type="Sprite2D" parent="Enemy"]
position = Vector2(-78, 1)
texture = ExtResource("8_lnf5q")
hframes = 6
vframes = 2
frame = 5

[node name="Pause" type="Node2D" parent="."]
position = Vector2(120, 220)

[node name="Sprite2D" type="Sprite2D" parent="Pause"]
position = Vector2(-20, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 17

[node name="Sprite2D2" type="Sprite2D" parent="Pause"]
position = Vector2(20, 0)
texture = ExtResource("12_yhltk")
hframes = 34
vframes = 24
frame = 94

[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
